--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,9 +17,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+//Typography Styles
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
+
+//Home Page Styles
 .navbar, .home-callout {
   //Gradient provided by @ _ighosh at uiGradients.com
   background: #00c6ff; /* fallback for old browsers */
@@ -27,27 +30,20 @@ h1, h2, h3 {
   background: linear-gradient(to right, #00c6ff, #0072ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+//Navbar Styles
 .navbar {
   border: none;
 }
 
-.navbar-default .navbar-brand {
-  color: white; 
-}
-
+.navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
   color: white;
+  &:hoverv{
+    color: white;
+    opacity: 0.75;
+ }
 }
 
-.navbar-default .navbar-brand:hover {
-  color: white; 
-  opacity: 0.75;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-  color: white;
-  opacity: 0.75;
-}
 .home-callout {
   color: white;
   margin-top: -20px;
